--- a/Editor/Resources/Translation/translations_ja.json
+++ b/Editor/Resources/Translation/translations_ja.json
@@ -49,10 +49,10 @@
         { "key": "160", "value": "インポート / 設定" },
         { "key": "161", "value": "セットアップ" },
         { "key": "162", "value": "アップロード" },
-        { "key": "163", "value": "アバターをみつける"},
+        { "key": "163", "value": "マーケット"},
 
         { "key": "164", "value": "モデルの高さ: "},
-        { "key": "165", "value": "あああ"},
+        { "key": "165", "value": ""},
         { "key": "166", "value": "モデルの高さを計算できません"},
         { "key": "167", "value": "詳細情報"},
         { "key": "168", "value": "概要: "},
