--- a/Editor/Resources/Translation/translations_ja.json
+++ b/Editor/Resources/Translation/translations_ja.json
@@ -9,7 +9,7 @@
         { "key": "106", "value": "Unitypackage をインポートします。" },
         { "key": "107", "value": "プロジェクト内のプレハブ" },
         { "key": "108", "value": "バージョン0.xのVRMファイルをインポートします。" },
-        { "key": "109", "value": "UnityでVRMファイルを使用するためには、\nUniVRMパッケージをインポートする必要があります。" },
+        { "key": "109", "value": "UnityでVRMファイルを使用するためにはVRM Converterを導入してください。" },
         { "key": "110", "value": "編集するアバターを選択" },
         { "key": "111", "value": "アップロードできるインスタンスがありません。\nアバターをインポートして、「更新する」を押してください。" },
         { "key": "112", "value": "選択中のプレハブ: " },
@@ -34,7 +34,7 @@
         { "key": "136", "value": "削除" },
         { "key": "137", "value": "キャンセル" },
         { "key": "138", "value": "VRMをインポート" },
-        { "key": "139", "value": "UniVRMを入手する" },
+        { "key": "139", "value": "配布ページへ" },
         { "key": "140", "value": "選択" },
         { "key": "141", "value": "ビルド" },
         { "key": "142", "value": "新しいアバターとの出会い" },
@@ -46,6 +46,7 @@
         { "key": "148", "value": "複製" },
         { "key": "150", "value": "編集ツール" },
         { "key": "151", "value": "アップロード可能なアバター" },
+
         { "key": "160", "value": "インポート / 設定" },
         { "key": "161", "value": "セットアップ" },
         { "key": "162", "value": "アップロード" },
@@ -110,7 +111,7 @@
         { "key": "702", "value": "メールアドレス（任意）"},
         { "key": "703", "value": "タイトル"},
         { "key": "704", "value": "本文"},
-        { "key": "705", "value": "送信ボタンを押すことで、プライバシーポリシーに同意したとみなされます。"},
+        { "key": "705", "value": "送信は取り消すことができません。\n個人情報は含めないでください。"},
         { "key": "706", "value": "送信"},
         { "key": "707", "value": "送信しました。ありがとうございます。"},
         { "key": "708", "value": "本文を入力してください。"},
