Update localization and UI styles

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -122,8 +122,8 @@
       "value": "選択中のプレハブ："
     },
     {
-      "key": "Height",
-      "value": "アバターの高さ"
+      "key": "Height: ",
+      "value": "アバターの高さ: "
     },
     {
       "key": "Avatar Editor",
