Update localization and UI components

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -238,7 +238,7 @@
       "value": "左のリストから設定したいアバターを選択してください。"
     },
     {
-      "key": "Filter tag",
+      "key": "Filter by Tag",
       "value": "タグで絞り込み"
     }
   ]
