--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -500,6 +500,22 @@
     {
       "key": "The information provided above is accurate and I have the rights to upload this content to VRChat",
       "value": "上記の設定は正しく、私はVRChatにアバターをアップロードすることを確認しました。"
+    },
+    {
+      "key": "Last Modified Descending",
+      "value": "最終更新日 新しい順"
+    },
+    {
+      "key": "Last Modified Ascending",
+      "value": "最終更新日 古い順"
+    },
+    {
+      "key": "Name Ascending",
+      "value": "名前順 A-Z"
+    },
+    {
+      "key": "Name Descending",
+      "value": "名前順 Z-A"
     }
   ]
 }
