Add new files and update existing files

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -540,6 +540,10 @@
     {
       "key": "Name Descending",
       "value": "名前順 Z-A"
+    },
+    {
+      "key": "This avatar is a converted VRM, Viewpoint Position may need to be adjusted.",
+      "value": "このアバターはVRMを変換したものです、Viewpoint Positionを調整する必要がある可能性があります。"
     }
   ]
 }
