--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -564,6 +564,26 @@
     {
       "key": "Hide",
       "value": "非表示にする"
+    },
+    {
+      "key": "Exit Unity",
+      "value": "Unityを終了する"
+    },
+    {
+      "key": "Confirm Exit",
+      "value": "終了の確認"
+    },
+    {
+      "key": "Are you sure you want to exit Unity?",
+      "value": "本当にUnityを終了しますか？\n（通常、作業状態は保存されます）"
+    },
+    {
+      "key": "Yes",
+      "value": "はい"
+    },
+    {
+      "key": "No",
+      "value": "いいえ"
     }
   ]
 }
