--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -551,7 +551,7 @@
     },
     {
       "key": "Show hidden models",
-      "value": "非表示のモデルも表示する"
+      "value": "非表示にしたモデルも表示する"
     },
     {
       "key": "Show only hidden models",
