Add localization for Save and Discard buttons, and implement functionality for updating VRCAvatar.

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -592,6 +592,14 @@
     {
       "key": "Are you sure you want to change the language?",
       "value": "本当に言語を変更しますか？"
+    },
+    {
+      "key": "Save",
+      "value": "保存"
+    },
+    {
+      "key": "Discard",
+      "value": "破棄"
     }
   ]
 }
