--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -592,6 +592,18 @@
     {
       "key": "Are you sure you want to change the language?",
       "value": "本当に言語を変更しますか？"
+    },
+    {
+      "key": "Light",
+      "value": "ライト"
+    },
+    {
+      "key": "Dark",
+      "value": "ダーク"
+    },
+    {
+      "key": "Experimental",
+      "value": "試験的な機能"
     }
   ]
 }
