--- a/Editor/Resources/Localization/ko.json
+++ b/Editor/Resources/Localization/ko.json
@@ -684,6 +684,22 @@
     {
       "key": "For Quest",
       "value": "Quest용"
+    },
+    {
+      "key": "Error Report",
+      "value": "오류 보고"
+    },
+    {
+      "key": "An error has occurred",
+      "value": "오류가 발생했습니다"
+    },
+    {
+      "key": "Copy this error message and send it to the developer. If close this window, the error message will be lost.",
+      "value": "이 오류 메시지를 복사하여 개발자에게 보내세요. 이 창을 닫으면 오류 메시지가 손실됩니다."
+    },
+    {
+      "key": "Copy",
+      "value": "복사"
     }
   ]
 }
