Add drop files feature and update localization for import files

--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -700,6 +700,14 @@
     {
       "key": "Copy",
       "value": "コピー"
+    },
+    {
+      "key": "Drop files(.unitypackage, .prefab) to import",
+      "value": "インポートするファイル（.unitypackage, .prefab）をドロップ"
+    },
+    {
+      "key": "Drop files(.unitypackage, .prefab, .vrm(ver. 0.x)) to import",
+      "value": "インポートするファイル（.unitypackage, .prefab, .vrm(ver. 0.x)）をドロップ"
     }
   ]
 }
