--- a/Editor/Resources/Localization/ko.json
+++ b/Editor/Resources/Localization/ko.json
@@ -694,8 +694,8 @@
       "value": "오류가 발생했습니다"
     },
     {
-      "key": "Copy this error message and send it to the developer. If close this window, the error message will be lost.",
-      "value": "이 오류 메시지를 복사하여 개발자에게 보내세요. 이 창을 닫으면 오류 메시지가 손실됩니다."
+      "key": "An error has occurred. Please try to resolve the issue based on this error or seek help from the community or other sources. However, if the error is caused by EAUploader, please report it to the developer via feedback.",
+      "value": "오류가 발생했습니다. 이 오류를 바탕으로 문제를 해결하거나 커뮤니티 등에 도움을 요청하세요. 단, 오류의 원인이 EAUploader에 있는 경우 피드백을 통해 개발자에게 보고해 주시기 바랍니다."
     },
     {
       "key": "Copy",
