--- a/Editor/Resources/Localization/ja.json
+++ b/Editor/Resources/Localization/ja.json
@@ -694,8 +694,8 @@
       "value": "エラーが発生しました"
     },
     {
-      "key": "Copy this error message and send it to the developer. If close this window, the error message will be lost.",
-      "value": "このエラーメッセージをコピーして開発者に送信してください。このウィンドウを閉じると、エラーメッセージが失われます。"
+      "key": "An error has occurred. Please try to resolve the issue based on this error or seek help from the community or other sources. However, if the error is caused by EAUploader, please report it to the developer via feedback.",
+      "value": "エラーが発生しました。このエラーをもとに解決を試みるか、コミュニティなどで助けを求めてください。ただし、EAUploaderが原因のエラーが発生した場合は、フィードバックから開発者まで報告してください。"
     },
     {
       "key": "Copy",
